--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -1,3 +1,44 @@
-<p>
-  home works!
-</p>
+<!-- <virtual-scroller #scroll [items]="tableListData">
+  <table class="table">
+    <thead #header>
+      <tr>
+        <th>Index</th>
+        <th>Name</th>
+        <th>Gender</th>
+        <th>Age</th>
+        <th>Address</th>
+      </tr>
+    </thead>
+    <tbody #container>
+      <tr *ngFor="let item of scroll.viewPortItems">
+        <td>{{ item.index }}</td>
+        <td>{{ item.name }}</td>
+        <td>{{ item.gender }}</td>
+        <td>{{ item.age }}</td>
+        <td>{{ item.address }}</td>
+      </tr>
+    </tbody>
+  </table>
+</virtual-scroller> -->
+<virtual-scroller #scroll [items]="tableListData">
+  <app-table>
+    <thead thead #header>
+      <tr>
+        <th>Index</th>
+        <th>Name</th>
+        <th>Gender</th>
+        <th>Age</th>
+        <th>Address</th>
+      </tr>
+    </thead>
+    <tbody tbody #container>
+      <tr *ngFor="let item of scroll.viewPortItems">
+        <td>{{ item.index }}</td>
+        <td>{{ item.name }}</td>
+        <td>{{ item.gender }}</td>
+        <td>{{ item.age }}</td>
+        <td>{{ item.address }}</td>
+      </tr>
+    </tbody>
+  </app-table>
+</virtual-scroller>
